--- a/src/components/Map.css
+++ b/src/components/Map.css
@@ -1,5 +1,10 @@
 .google-map {
-    width: 100%;
-    height: 100vh;
+    width: 90%;
+    height: 80vh;
     background-color: lightgray;
+    margin: 0 auto;
+}
+
+select {
+    margin: 10px;
 }
